--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -413,7 +413,7 @@
     <string name="option_isbn_strict">Sıkı ISBN</string>
     <string name="lbl_style">Stil</string>
     <string name="lbl_styles">Stilleri</string>
-    <string name="lbl_styles_long">Kitap listesi stilleri</string>
+    <string name="lbl_styles_long">Kitaplık tasarımı</string>
     <string name="lbl_sync_date">Dan beri</string>
     <string name="lbl_tab_alternative_editions">Alt. Basımlar</string>
     <string name="lbl_tab_details">Ayrıntılar</string>
@@ -651,7 +651,7 @@
     <string name="warning_backup_request">Veritabanınızı SD karta yedeklemek ister misiniz?</string>
     <string name="warning_book_not_always_found">Tüm siteler geçerli veri döndürmedi.</string>
     <string name="warning_book_not_found">Belirtilen kitap bulunamıyor.</string>
-    <string name="warning_cannot_delete_1st_bs">Birinci kitaplık silinemiyor.</string>
+    <string name="warning_cannot_delete_1st_bs">İlk Kitap Rafı silinemez.</string>
     <string name="warning_enable_at_least_1_website">Her kategori için en az bir web sitesini etkinleştirin.</string>
     <string name="warning_export_contains_no_data">İhraç edecek bir şey yoktu.</string>
     <string name="warning_if_day_set_month_and_year_must_be">Eğer gün belirtmiş iseniz hem ay hem yıl bölümlerini de doldurmalısınız.</string>
